# atlassians

./: .bazelrc  .clang-tidy  .editorconfig  .env.example  .gcovr.cfg  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hadolint.yaml  .lcovrc  .markdownlint.yaml  .pre-commit-config.yaml  .semgrepignore  .shellcheckrc  .yamllint.yml  BUILD  CPPLINT.cfg  Gemfile  LICENSE  MODULE.bazel  Makefile  NOTICE  README.bazel.md  README.md  build.cmd.sh  go.mod  go.sum  package.json  pnpm-lock.yaml  pyproject.toml
src/it/: BUILD.bazel  main.cpp
src/it/com/github/doevelopper/atlassians/bdddriver/: BddDriver.cpp  BddDriver.hpp  BddEnvironment.cpp  BddEnvironment.hpp  BddStaticInit.cpp
src/it/com/github/doevelopper/atlassians/features/: acceptance-test-plan.feature  smoke.feature
src/it/com/github/doevelopper/atlassians/features/step_definitions/: AcceptanceSteps.cpp
src/it/com/github/doevelopper/atlassians/launcher/features/: launcher.feature
src/it/com/github/doevelopper/atlassians/launcher/fsm/: README.md
src/it/com/github/doevelopper/atlassians/licensing/features/: license_management.feature
src/it/com/github/doevelopper/atlassians/logging/features/: logger_appenders.feature  logger_performance.feature  logging_ops.feature
src/it/com/github/doevelopper/atlassians/semver/features/: semver.feature
src/it/com/github/doevelopper/atlassians/system/bdddriver/: BddEnvironment.hpp  README.md
src/it/com/github/doevelopper/atlassians/system/features/: regression.feature  system.feature
src/it/com/github/doevelopper/premisses/bdddriver/: README.md
src/it/config/: log4cxx-integration-test.xml
src/main/cpp/: BUILD.bazel  main.cpp
src/main/cpp/com/github/doevelopper/atlassians/: API_Export.hpp  CompilerDetection.hpp  Poison.hpp
src/main/cpp/com/github/doevelopper/atlassians/atlas/: Activator.cpp  Activator.hpp  NoOp.cpp  NoOp.hpp  Notification.cpp  Notification.hpp
src/main/cpp/com/github/doevelopper/atlassians/canary/: ISystemInfoProvider.hpp  ISystemObserver.hpp  ProcCpuInfoProvider.cpp  ProcCpuInfoProvider.hpp  ProcLoadAvgProvider.cpp  ProcLoadAvgProvider.hpp  ProcMemInfoProvider.cpp  ProcMemInfoProvider.hpp  ProcUptimeProvider.cpp  ProcUptimeProvider.hpp  SystemInfo.cpp  SystemInfo.hpp  SystemMetrics.hpp  SystemMonitor.cpp  SystemMonitor.hpp
src/main/cpp/com/github/doevelopper/atlassians/demo/: Calculator.cpp  Calculator.hpp
src/main/cpp/com/github/doevelopper/atlassians/events/: EventSystem.cpp  EventSystem.hpp
src/main/cpp/com/github/doevelopper/atlassians/launcher/: Application.cpp  Application.hpp  ApplicationPrivate.cpp  ApplicationPrivate.hpp  Package.cpp  Package.hpp
src/main/cpp/com/github/doevelopper/atlassians/licensing/: BaseLicenseStorage.cpp  BaseLicenseStorage.hpp  BaseLicenseValidator.cpp  BaseLicenseValidator.hpp  ExpirationValidator.cpp  ExpirationValidator.hpp  FeatureValidator.cpp  FeatureValidator.hpp  FileLicenseStorage.cpp  FileLicenseStorage.hpp  HardwareIdValidator.cpp  HardwareIdValidator.hpp  ILicenseGenerator.hpp  ILicenseObserver.hpp  ILicensePolicy.hpp  ILicenseStorage.hpp  ILicenseValidator.hpp  ILicenseVerifier.hpp  License.cpp  License.hpp  LicenseManager.cpp  LicenseManager.hpp  LicenseTypes.hpp  ValidationChain.cpp  ValidationChain.hpp
src/main/cpp/com/github/doevelopper/atlassians/logging/: CustomLogger.cpp  CustomLogger.hpp  CustomLoggerPrivate.cpp  CustomLoggerPrivate.hpp  DefaultInitializationStrategy.cpp  DefaultInitializationStrategy.hpp  Demangler.cpp  Demangler.hpp  EncryptedFileAppender.cpp  EncryptedFileAppender.hpp  EnvironmentBasedInitializationStrategy.cpp  EnvironmentBasedInitializationStrategy.hpp  ILoggingInitializationStrategy.cpp  ILoggingInitializationStrategy.hpp  LogMacros.hpp  LoggingInitializationFactory.cpp  LoggingInitializationFactory.hpp  LoggingInitializer.cpp  LoggingInitializer.hpp  ProgrammaticInitializationStrategy.cpp  ProgrammaticInitializationStrategy.hpp  PropertyFileBasedInitializationStrategy.cpp  PropertyFileBasedInitializationStrategy.hpp  XMLFileBasedInitializationStrategy.cpp  XMLFileBasedInitializationStrategy.hpp
src/main/cpp/com/github/doevelopper/atlassians/plugin/: CMakeLists.txt  promt.md
src/main/cpp/com/github/doevelopper/atlassians/semver/: GitRevision.hpp  Version.cpp  Version.hpp  VersionConstraint.cpp  VersionConstraint.hpp
src/main/cpp/com/github/doevelopper/atlassians/triada/: Error.cpp  Error.hpp  ErrorCategory.cpp  ErrorCategory.hpp  ErrorCode.cpp  ErrorCode.hpp  ErrorContext.cpp  ErrorContext.hpp  ErrorReporting.cpp  ErrorReporting.hpp  ErrorStateMachine.cpp  ErrorStateMachine.hpp  Exceptions.hpp  RecoveryStrategy.cpp  RecoveryStrategy.hpp
src/test/cpp/: BUILD.bazel  main.cpp
src/test/cpp/com/github/doevelopper/atlassians/atlas/: NoOpTest.cpp  NoOpTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/canary/: SystemInfoTest.cpp  SystemInfoTest.hpp  SystemMonitorTest.cpp  SystemMonitorTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/demo/: CalculatorTest.cpp  CalculatorTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/licensing/: LicenseManagerTest.cpp  LicenseManagerTest.hpp  LicenseStorageTest.cpp  LicenseStorageTest.hpp  LicenseTest.cpp  LicenseTest.hpp  LicenseValidatorTest.cpp  LicenseValidatorTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/quota/: BoundedAllocatorTest.cpp  BoundedAllocatorTest.hpp  DeferredReclamationAllocatorTest.cpp  DeferredReclamationAllocatorTest.hpp  OutOfMemoryAllocatorTest.cpp  OutOfMemoryAllocatorTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/semver/: VersionConstraintTest.cpp  VersionConstraintTest.hpp  VersionTest.cpp  VersionTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/triada/: ErrorCodeTest.cpp  ErrorCodeTest.hpp  ErrorStateMachineTest.cpp  ErrorStateMachineTest.hpp  ErrorTest.cpp  ErrorTest.hpp  RecoveryStrategyTest.cpp  RecoveryStrategyTest.hpp
src/test/cpp/com/github/doevelopper/atlassians/utdriver/: CustomTestEnvironment.cpp  CustomTestEnvironment.hpp  EnvironmentRecorder.cpp  EnvironmentRecorder.hpp  TestDriver.cpp  TestDriver.hpp  TestEventListener.cpp  (+4 more)
(+636 files in other folders)
