""" Workspace for Open Source Premisses library """

module(
    name = "atlassians",
    repo_name = "com_github_doevelopper_atlassians",
    version = "0.0.1",
)

# Core Bazel rules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_autoconf", version = "0.0.16")
bazel_dep(name = "rules_cc_autoconf", version = "0.7.12")
bazel_dep(name = "rules_doxygen", version = "2.6.2")
bazel_dep(name = "rules_gherkin", version = "0.2.0")
bazel_dep(name = "cucumber-cpp", version = "0.8.0.bcr.1")
bazel_dep(name = "rules_kconfig", version = "0.0.3")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
# bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")

# Hermetic C++ toolchain
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "21.1.0",
        "darwin-x86_64": "19.1.7",
        "darwin-aarch64": "19.1.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "abseil-cpp", version = "20240722.1", repo_name = "com_google_absl")
bazel_dep(name = "abseil-py", version = "2.1.0", repo_name = "io_abseil_py")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "snappy", version = "1.2.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "libexpat", version = "2.7.1.bcr.1")

BOOST_VERSION = "1.90.0.bcr.1"
bazel_dep(name = "boost.algorithm", version = BOOST_VERSION)
bazel_dep(name = "boost.asio", version = BOOST_VERSION)

bazel_dep(name = "boost.bind", version = BOOST_VERSION)

bazel_dep(name = "boost.config", version = BOOST_VERSION)
bazel_dep(name = "boost.core", version = BOOST_VERSION)
bazel_dep(name = "boost.container", version = BOOST_VERSION)

bazel_dep(name = "boost.fusion", version = BOOST_VERSION)
bazel_dep(name = "boost.format", version = BOOST_VERSION)
bazel_dep(name = "boost.functional", version = BOOST_VERSION)

bazel_dep(name = "boost.geometry", version = BOOST_VERSION)
bazel_dep(name = "boost.graph", version = BOOST_VERSION)

bazel_dep(name = "boost.heap", version = BOOST_VERSION)

bazel_dep(name = "boost.icl", version = BOOST_VERSION)
bazel_dep(name = "boost.interprocess", version = BOOST_VERSION)
bazel_dep(name = "boost.iostreams", version = BOOST_VERSION)

bazel_dep(name = "boost.lambda", version = BOOST_VERSION)

bazel_dep(name = "boost.multi_array", version = BOOST_VERSION)
bazel_dep(name = "boost.multi_index", version = BOOST_VERSION)
bazel_dep(name = "boost.multiprecision", version = BOOST_VERSION)

bazel_dep(name = "boost.optional", version = BOOST_VERSION)

bazel_dep(name = "boost.phoenix", version = BOOST_VERSION)
bazel_dep(name = "boost.polygon", version = BOOST_VERSION)
bazel_dep(name = "boost.property_tree", version = BOOST_VERSION)
bazel_dep(name = "boost.process", version = BOOST_VERSION)
bazel_dep(name = "boost.program_options", version = BOOST_VERSION)
bazel_dep(name = "boost.property_map", version = BOOST_VERSION)

bazel_dep(name = "boost.stacktrace", version = BOOST_VERSION)
bazel_dep(name = "boost.serialization", version = BOOST_VERSION)
bazel_dep(name = "boost.spirit", version = BOOST_VERSION)
bazel_dep(name = "boost.static_assert", version = BOOST_VERSION)
bazel_dep(name = "boost.thread", version = BOOST_VERSION)
bazel_dep(name = "boost.type_traits", version = BOOST_VERSION)

bazel_dep(name = "boost.uuid", version = BOOST_VERSION)
bazel_dep(name = "boost.variant", version = BOOST_VERSION)

bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")

bazel_dep(name = "google_benchmark", version = "1.9.4", repo_name = "com_github_google_benchmark")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "nlohmann_json", version = "3.12.0", repo_name = "json")
bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "openssl", version = "3.5.5.bcr.1")

# APR (Apache Portable Runtime) — not in BCR, fetched via module extension
apr_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/apr:apr_extension.bzl",
    "apr_extension",
)
use_repo(apr_ext, "org_apache_apr")

# APR-util (Apache Portable Runtime Utility) — not in BCR, fetched via module extension
apr_util_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/apr_util:apr_util_extension.bzl",
    "apr_util_extension",
)
# com_github_expat is also declared so root-module build files (used as build_file
# for @org_apache_apr_util) can resolve @com_github_expat in their deps.
use_repo(apr_util_ext, "org_apache_apr_util", "com_github_expat")

# log4cxx (Apache Logging for C++) — not in BCR, fetched via module extension
log4cxx_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/log4cxx:log4cxx_extension.bzl",
    "log4cxx_extension",
)
use_repo(log4cxx_ext, "org_apache_log4cxx")
