""" Workspace for Open Source Premisses library """

module(
    name = "atlassians",
    repo_name = "com_github_doevelopper_atlassians",
    version = "0.0.1",
)

# Core Bazel rules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_autoconf", version = "0.0.16")
bazel_dep(name = "rules_cc_autoconf", version = "0.7.12")
bazel_dep(name = "rules_doxygen", version = "2.6.2")
bazel_dep(name = "rules_gherkin", version = "0.2.0")
bazel_dep(name = "cucumber-cpp", version = "0.8.0.bcr.1")
bazel_dep(name = "rules_kconfig", version = "0.0.3")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
# bazel_dep(name = "rules_proto_grpc_cpp", version = "5.8.0")


# Ruby SDK setup
bazel_dep(name = "rules_ruby", version = "0.21.1")

# Ruby gem bundle for cucumber CLI (must be in root MODULE.bazel)
ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "jruby-9.4.5.0",
)
ruby.bundle_fetch(
    name = "cucumber",
    gem_checksums = {
        "base64-0.3.0": "27337aeabad6ffae05c265c450490628ef3ebd4b67be58257393227588f5a97b",
        "bigdecimal-4.0.1": "8b07d3d065a9f921c80ceaea7c9d4ae596697295b584c296fe599dd0ad01c4a7",
        "bigdecimal-4.0.1-java": "95c40a0a92dfb83b293f4b9865cd27caa7c045bedab86f3620e5dc27e6553083",
        "builder-3.3.0": "497918d2f9dca528fdca4b88d84e4ef4387256d984b8154e9d5d3fe5a9c8835f",
        "cucumber-10.2.0": "fdedbd31ecf40858b60f04853f2aa15c44f5c30bbac29c6a227fa1e7005a8158",
        "cucumber-ci-environment-9.2.0": "98121d128af99883f65b3ab78e987be9d57c17e1adeb79783e4bc269b8592128",
        "cucumber-core-15.4.0": "161309d85847b336c998b201e2003d3f4a86207fa4816da2678fe3d7f3735e45",
        "cucumber-cucumber-expressions-18.0.1": "8398a0bf636af33ff3b61e459a309295eb02745b9e21bd7af0eaaa2a1e6be3e5",
        "cucumber-gherkin-36.1.0": "c2b8e950fc3dc0b19d7fd59bb5e47950dbe61129bffcf3c038fcacaea7942b09",
        "cucumber-html-formatter-22.2.0": "e92fed01ee5a120690da89152ddbe71b77aa56b058228f9df81c6bf8cd4b6980",
        "cucumber-messages-29.0.1": "77bd8ad859ae35fd4e076cd32fce940963317e17229dd51c7844ac11766a6cb9",
        "cucumber-tag-expressions-8.1.0": "9bd8c4b6654f8e5bf2a9c99329b6f32136a75e50cd39d4cfb3927d0fa9f52e21",
        "cucumber-wire-8.0.0": "7dc80ba47c7d7b5f50a2892179f742398e2a7886cfb1a22733ad504a979a2608",
        "diff-lcs-1.6.2": "9ae0d2cba7d4df3075fe8cd8602a8604993efc0dfa934cff568969efb1909962",
        "ffi-1.17.2": "297235842e5947cc3036ebe64077584bff583cd7a4e94e9a02fdec399ef46da6",
        "ffi-1.17.2-java": "94c8516d7c97b21915497b994e41f69e7e8e21d5fc085c498b68e52044e191ec",
        "ffi-1.17.2-x86_64-linux-gnu": "05d2026fc9dbb7cfd21a5934559f16293815b7ce0314846fee2ac8efbdb823ea",
        "logger-1.7.0": "196edec7cc44b66cfb40f9755ce11b392f21f7967696af15d274dde7edff0203",
        "memoist3-1.0.0": "686e42402cf150a362050c23143dc57b0ef88f8c344943ff8b7845792b50d56f",
        "mini_mime-1.1.5": "8681b7e2e4215f2a159f9400b5816d85e9d8c6c6b491e96a12797e798f8bccef",
        "multi_test-1.1.0": "e9e550cdd863fb72becfe344aefdcd4cbd26ebf307847f4a6c039a4082324d10",
        "sys-uname-1.4.1": "ed2278ec670ee8af5eb5420d3a98e22188051f6241180db7c779993db2739a16",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "cucumber", "ruby", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

# Hermetic C++ toolchain
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_versions = {
        "": "21.1.0",
        "darwin-x86_64": "19.1.7",
        "darwin-aarch64": "19.1.7",
    },
)
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")

bazel_dep(name = "abseil-cpp", version = "20240722.1", repo_name = "com_google_absl")
bazel_dep(name = "abseil-py", version = "2.1.0", repo_name = "io_abseil_py")
bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20241007")
bazel_dep(name = "crc32c", version = "1.1.0")
bazel_dep(name = "fmt", version = "12.1.0")
bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "snappy", version = "1.2.1")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "zlib", version = "1.3.1.bcr.6")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "libexpat", version = "2.7.1.bcr.1")

# BOOST_VERSION = "1.90.0.bcr.1"
# BOOST_VERSION = "1.83.0"
BOOST_VERSION = "1.90.0"
# bazel_dep(name = "boost", version = "1.90.0")
# bazel_dep(name = "boost.algorithm", version = BOOST_VERSION)
bazel_dep(name = "boost.asio", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.bind", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.config", version = BOOST_VERSION)
# bazel_dep(name = "boost.core", version = BOOST_VERSION)
# bazel_dep(name = "boost.container", version = BOOST_VERSION)
#
# # bazel_dep(name = "boost.fusion", version = BOOST_VERSION)
# bazel_dep(name = "boost.format", version = BOOST_VERSION)
# bazel_dep(name = "boost.functional", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.geometry", version = BOOST_VERSION)
# bazel_dep(name = "boost.graph", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.heap", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.icl", version = BOOST_VERSION)
# bazel_dep(name = "boost.interprocess", version = BOOST_VERSION)
# bazel_dep(name = "boost.iostreams", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.lambda", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.multi_array", version = BOOST_VERSION)
# bazel_dep(name = "boost.multi_index", version = BOOST_VERSION)
# bazel_dep(name = "boost.multiprecision", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.optional", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.phoenix", version = BOOST_VERSION)
# bazel_dep(name = "boost.polygon", version = BOOST_VERSION)
# bazel_dep(name = "boost.property_tree", version = BOOST_VERSION)
# bazel_dep(name = "boost.process", version = BOOST_VERSION)
bazel_dep(name = "boost.program_options", version = BOOST_VERSION)
# bazel_dep(name = "boost.property_map", version = BOOST_VERSION)
# bazel_dep(name = "boost.statechart", version = BOOST_VERSION)
# bazel_dep(name = "boost.stacktrace", version = BOOST_VERSION)
# bazel_dep(name = "boost.serialization", version = BOOST_VERSION)
# bazel_dep(name = "boost.spirit", version = BOOST_VERSION)
# bazel_dep(name = "boost.static_assert", version = BOOST_VERSION)
# bazel_dep(name = "boost.thread", version = BOOST_VERSION)
bazel_dep(name = "boost.type_traits", version = BOOST_VERSION)
#
# bazel_dep(name = "boost.uuid", version = BOOST_VERSION)
# bazel_dep(name = "boost.variant", version = BOOST_VERSION)

bazel_dep(name = "gflags", version = "2.2.2")
bazel_dep(name = "glog", version = "0.7.1")

bazel_dep(name = "google_benchmark", version = "1.9.4", repo_name = "com_github_google_benchmark")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "nlohmann_json", version = "3.12.0", repo_name = "json")
bazel_dep(name = "eigen", version = "5.0.1")
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")
bazel_dep(name = "openssl", version = "3.5.5.bcr.1")

# APR (Apache Portable Runtime) — not in BCR, fetched via module extension
apr_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/apr:apr_extension.bzl",
    "apr_extension",
)
use_repo(apr_ext, "org_apache_apr")

# APR-util (Apache Portable Runtime Utility) — not in BCR, fetched via module extension
apr_util_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/apr_util:apr_util_extension.bzl",
    "apr_util_extension",
)
# com_github_expat is also declared so root-module build files (used as build_file
# for @org_apache_apr_util) can resolve @com_github_expat in their deps.
use_repo(apr_util_ext, "org_apache_apr_util", "com_github_expat")

# log4cxx (Apache Logging for C++) — not in BCR, fetched via module extension
log4cxx_ext = use_extension(
    "//buildsys/bazel/off_the_shelf_software/log4cxx:log4cxx_extension.bzl",
    "log4cxx_extension",
)
use_repo(log4cxx_ext, "org_apache_log4cxx")

