load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_gherkin//gherkin:defs.bzl", "gherkin_library", "cc_gherkin_steps", "gherkin_test")
#load("//tools/starlark/rules/cc_bdd:defs.bzl", "cc_gherkin_steps")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

package(
    default_visibility = ["//visibility:public"],
)


cc_library(
    name = "com.github.doevelopper.atlassians.bdddriver",
    srcs = [
        "com/github/doevelopper/atlassians/bdddriver/BddDriver.cpp",
        "com/github/doevelopper/atlassians/bdddriver/BddEnvironment.cpp",
        "com/github/doevelopper/atlassians/bdddriver/BddStaticInit.cpp",
    ],
    hdrs = [
        "com/github/doevelopper/atlassians/bdddriver/BddDriver.hpp",
        "com/github/doevelopper/atlassians/bdddriver/BddEnvironment.hpp",
    ],
    includes = ["."],
    deps = [
        "@cucumber-cpp//:cucumber-cpp",
        "@googletest//:gtest",
        "//src/main/cpp:com.github.doevelopper.atlassians.main.logging",
    ],
)

cc_gherkin_steps(
    name = "com.github.doevelopper.atlassians.atlas-steps",
    srcs = [
        "com/github/doevelopper/atlassians/atlas/features/step_definitions/atlas.cpp",
        "com/github/doevelopper/atlassians/atlas/features/step_definitions/atlas.hpp",
    ],
    deps = [
        ":com.github.doevelopper.atlassians.bdddriver",
        "//src/main/cpp:com.github.doevelopper.atlassians.main.atlas",
        "@cucumber-cpp//:cucumber-cpp",
        "@googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

gherkin_test(
    name = "com.github.doevelopper.atlassians.atlas.atp",
    steps = ":com.github.doevelopper.atlassians.atlas-steps",
    deps = [
        ":com.github.doevelopper.atlassians.atlas.feature",
    ],
)

gherkin_library(
    name = "com.github.doevelopper.atlassians.atlas.feature",

    srcs = [
        "com/github/doevelopper/atlassians/atlas/features/atlas.feature",
    ],
)

cc_gherkin_steps(
    name = "com.github.doevelopper.atlassians.demo-steps",
    srcs = [
        "com/github/doevelopper/atlassians/demo/features/step_definitions/Calculator.cpp",
        "com/github/doevelopper/atlassians/demo/features/step_definitions/Calculator.hpp",
    ],
    deps = [
        ":com.github.doevelopper.atlassians.bdddriver",
        "//src/main/cpp:com.github.doevelopper.atlassians.main.demo",
        "@cucumber-cpp//:cucumber-cpp",
        "@googletest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

gherkin_test(
    name = "com.github.doevelopper.atlassians.demo.atp",
    steps = ":com.github.doevelopper.atlassians.demo-steps",
    deps = [
        ":com.github.doevelopper.atlassians.demo.feature",
    ],
)

gherkin_library(
    name = "com.github.doevelopper.atlassians.demo.feature",

    srcs = [
        "com/github/doevelopper/atlassians/demo/features/calculator.feature",
    ],
)

pkg_tar(
    name = "com.github.doevelopper.atlassians.it.package",
    srcs = [
        ":com.github.doevelopper.atlassians.atlas-steps",
        ":com.github.doevelopper.atlassians.demo-steps",
    ],
    extension = "tar.gz",
    package_dir = "/opt/atlassians/it",
    visibility = ["//visibility:public"],
)
